RESOLVED FIXED161461
FocusController should pass KeyboardEvent around by reference.
https://bugs.webkit.org/show_bug.cgi?id=161461
Summary FocusController should pass KeyboardEvent around by reference.
Andreas Kling
Reported 2016-08-31 15:07:49 PDT
KeyboardEvent* -> KeyboardEvent&
Attachments
Patch (19.71 KB, patch)
2016-08-31 15:08 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-08-31 15:08:40 PDT
WebKit Commit Bot
Comment 2 2016-08-31 15:11:35 PDT
Attachment 287548 [details] did not pass style-queue: ERROR: Source/WebCore/page/FocusController.cpp:399: 'event' is incorrectly named. It should be named 'protector' or 'protectedProvidedEvent'. [readability/naming/protected] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2016-09-01 07:24:26 PDT
Comment on attachment 287548 [details] Patch Clearing flags on attachment: 287548 Committed r205290: <http://trac.webkit.org/changeset/205290>
WebKit Commit Bot
Comment 4 2016-09-01 07:24:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.