Source/WebCore/page/EventHandler.cpp
@@ -3666,7 +3666,7 @@ void EventHandler::defaultArrowEventHandler(FocusDirection focusDirection, Keybo
     if (m_frame.document()->inDesignMode())
         return;
 
-    if (page->focusController().advanceFocus(focusDirection, &event))
+    if (page->focusController().advanceFocus(focusDirection, event))
         event.setDefaultHandled();
 }
 
@@ -3690,7 +3690,7 @@ void EventHandler::defaultTabEventHandler(KeyboardEvent& event)
     if (m_frame.document()->inDesignMode())
         return;
 
-    if (page->focusController().advanceFocus(focusDirection, &event))
+    if (page->focusController().advanceFocus(focusDirection, event))
         event.setDefaultHandled();
 }
 
